# quest-board

./: .dockerignore  .gitignore  .redocly.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  mcp.json  openapi.yaml
.github/: dependabot.yml
.github/workflows/: build.yml  docker.yml
backend/: .env  .env.example  .env.test  Cargo.toml
backend/bindings/: ApiKey.ts  ApiKeyResponse.ts  Attachment.ts  CreateApiKeyRequest.ts  ListWithCards.ts  RegisterRequest.ts  TaskListWithTasks.ts  UpdateCardRequest.ts  UpdateLabelRequest.ts  UpdateNameRequest.ts  User.ts  UserResponse.ts
backend/migrations/: 001_initial.sql
backend/src/: ai_tools.rs  api_doc.rs  auth.rs  error.rs  lib.rs  main.rs  slug.rs
backend/src/db/: mod.rs
backend/src/handlers/: ai.rs  attachment.rs  auth.rs  board.rs  card.rs  comment.rs  favorite.rs  health.rs  label.rs  list.rs  mod.rs  search.rs
backend/src/models/: action.rs  attachment.rs  board.rs  card.rs  checklist.rs  comment.rs  favorite.rs  label.rs  list.rs  mod.rs  notification.rs  user.rs
backend/src/repository/: action_repo.rs  api_key_repo.rs  attachment_repo.rs  board_repo.rs  card_repo.rs  checklist_repo.rs  comment_repo.rs  favorite_repo.rs  label_repo.rs  list_repo.rs  mod.rs  user_repo.rs
backend/static/: docs.html  index.html
backend/tests/: ai.rs  api_keys.rs  auth.rs  board.rs  card_edit.rs  comment.rs  delete.rs  health.rs
bindings/: Action.ts  ApiKey.ts  Board.ts  Card.ts  CardWithMembers.ts  Comment.ts  CommentWithUser.ts  CreateCardRequest.ts  CreateCommentRequest.ts  CreateFavoriteRequest.ts  CreateLabelRequest.ts  CreateListRequest.ts  CreateTaskListRequest.ts  CreateTaskRequest.ts  Favorite.ts  Label.ts  List.ts  MoveCardRequest.ts  Notification.ts  RegisterRequest.ts  Task.ts  TaskList.ts  UpdateBoardRequest.ts  UpdateCardRequest.ts  UpdateCommentRequest.ts  UpdateListRequest.ts  UpdateTaskRequest.ts  User.ts  UserResponse.ts
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: auth.spec.ts  board.spec.ts  boards.spec.ts  settings.spec.ts
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
frontend/.storybook/: main.ts
frontend/src/: app.css
frontend/src/lib/: api.test.ts  api.ts  uuid.ts
frontend/src/lib/components/: BoardCard.stories.svelte  BoardCard.svelte  BoardCard.test.ts  Card.svelte  Card.test.ts  CardDetail.svelte  CardDetail.test.ts  ChatPanel.svelte  ChatPanel.test.ts  KanbanColumn.svelte  KanbanColumn.test.ts  LabelBadge.svelte  LabelBadge.test.ts  MemberAvatar.svelte  MemberAvatar.test.ts
frontend/src/routes/: +page.svelte  page.test.ts
frontend/tests/: storybook.test.ts
migrations/: 001_initial.sql  002_native_uuids.sql  003_api_keys.sql  004_email_to_username.sql  005_card_start_date.sql  006_remove_user_name.sql  007_attachment_size_bigint.sql
src/: ai_tools.rs  auth.rs  cli.rs  error.rs  events.rs  lib.rs  main.rs  session.rs  slug.rs
src/db/: mod.rs
src/handlers/: api_key.rs  attachment.rs  auth.rs  board.rs  card.rs  comment.rs  favorite.rs  health.rs  label.rs  list.rs  mod.rs  search.rs
src/models/: action.rs  api_key.rs  attachment.rs  board.rs  card.rs  checklist.rs  comment.rs  favorite.rs  label.rs  list.rs  notification.rs  user.rs
src/repository/: action_repo.rs  api_key_repo.rs  attachment_repo.rs  board_repo.rs  card_repo.rs  checklist_repo.rs  comment_repo.rs  mod.rs  notification_repo.rs  user_repo.rs
src/services/: api_key_service.rs  attachment_service.rs  auth_service.rs  board_service.rs  card_service.rs  comment_service.rs  favorite_service.rs  label_service.rs  list_service.rs  mod.rs  search_service.rs
static/: board.html  boards.html  index.html  settings.html
static/css/: style.css
static/js/: api.js
templates/: base.html  board.html  boards.html  settings.html
templates/partials/: board_grid.html
tests/: ai.rs  api_keys.rs  attachment.rs  auth.rs  board.rs  card_edit.rs  comment.rs  delete.rs  health.rs  label.rs  static_auth.rs
uploads/: b7ebb3bf-f487-4d9c-a782-ae00162a4b34_rimota_remota_link_requests_20260709.csv  dbfa990c-bcd2-413c-a019-319f65e06395_ajicom_link_tbl_export_20260709.csv
(+17 files in other folders)
