[package]
name = "quest-board"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "fs"] }

# Database
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "chrono", "uuid", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }
ts-rs = { version = "12", features = ["serde-compat", "uuid-impl", "chrono-impl"] }
sha2 = "0.11"
base64 = "0.22"
rand = "0.10"
hex = "0.4"

# Auth
argon2 = { version = "0.6.0-rc.8", features = ["getrandom"] }
password-hash = "0.6"

tower-sessions = { version = "0.15", features = ["memory-store"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

time = { version = "0.3", features = ["serde"] }
dotenvy = "0.15"
chrono = { version = "0.4.45", features = ["serde"] }
tower-sessions-core = "0.15"

reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
rpassword = "7"
dirs = "6"

[[bin]]
name = "qb"
path = "src/cli.rs"
