[package]
name = "quest-board"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "fs"] }

# Database
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "chrono", "uuid", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }
utoipa = { version = "5", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
rand = "0.9"

# Auth
argon2 = { version = "0.6.0-rc.8", features = ["getrandom"] }
password-hash = "0.6"

tower-sessions = { version = "0.15", features = ["memory-store"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

async-trait = "0.1"
time = "0.3"
dotenvy = "0.15"
chrono = { version = "0.4.45", features = ["serde"] }
tower-sessions-core = "0.15"
